--- a/Assets/stylesheets/main.css
+++ b/Assets/stylesheets/main.css
@@ -189,6 +189,8 @@ h3 {
       font-weight: bold;
   text-align: center;
   }
+
+
   .signin-form .small {
       font-size: 13px;
   }
@@ -251,4 +253,8 @@ h3 {
 }
 .social-btn .btn i {
   font-size: 20px;
+}
+.bondBox{
+margin: 2%;
+box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
