--- a/Assets/stylesheets/main.css
+++ b/Assets/stylesheets/main.css
@@ -272,3 +272,24 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 .search{
   width: 80% !important;
 }
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  border-radius: 30px;
+}
+
+.alertBlue{
+  padding: 20px;
+  background-color: #3659f4;
+  color: white;
+  border-radius: 30px;
+}
+
+.alertYellow{
+  padding: 20px;
+  background-color: #f4c836;
+  color: white;
+  border-radius: 30px;
+}
