--- a/Assets/stylesheets/main.css
+++ b/Assets/stylesheets/main.css
@@ -293,3 +293,21 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   color: white;
   border-radius: 30px;
 }
+
+
+.fbbtn{
+  height: 36px !important;
+  width: 120px !important;
+  background-color: #fff;
+  color: #0365e6;
+  cursor: pointer;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.25);
+  border-radius: initial;
+  margin-top: auto !important;
+  padding-top: 1px !important;
+}
+.fbbtn:hover{
+  background-color: #0365e6;
+  color: #fff;
+
+}
